# querymap

./: .gitignore  CHANGELOG.md  CLA.md  CONTRIBUTING.md  README.md  SECURITY.md  clearmetric-architecture.md  mkdocs.yml  pyproject.toml  pyrightconfig.json
.github/workflows/: ci.yml  cla.yml  docs.yml  publish.yml
docs/: adoption-gate.md  artifact-schema.md  backbone-lab.md  backbone-v2-roadmap.md  development.md  e2e-readiness.md  index.md  limitations.md  lineage-contract-validation.md  lineage-step0.md  modules_instruction.md  orchestration.md  public-architecture.md  release_checklist.md  v1-boundary.md
docs/decisions/: rule1-powerbi-kill-test.md
docs/reference/: cli.md  contract.md  lineage-limitations.md
examples/notebooks/: 01_public_wedge_lineage.ipynb  02_compile_formats.ipynb  03_impact_analysis.ipynb  04_consumer_bundle.ipynb  05_backbone_lab_experimental.ipynb
examples/wedge-jaffle/: README.md
querymap/: __init__.py  __main__.py  api.py  ast_utils.py  build.py  cli.py  ctes.py  errors.py  models.py  parser.py  relations.py
querymap/render/: __init__.py  json.py  text.py
scripts/: generate_wiki.py
spec/: clearmetric-project.schema.json
tests/: test_cli.py  test_contract.py  test_cross_package_artifacts.py  test_ctes.py  test_errors.py  test_import_boundary.py  test_module_independence.py  test_relations.py  test_render_json.py  test_repository_boundaries.py  test_statement_support.py  test_wiki_generation.py
tests/fixtures/golden_merge/: aliases.yaml
